<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.generator.random.viewmodel.listener.MainActivityListenerViewModel"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.data.GenerateInfo"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.data.ServerInfo"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.converter.CountStringConverter"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.converter.MaximumStringConverter"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.converter.MinimumStringConverter"/>
        <import type="org.csystem.android.app.generator.random.viewmodel.converter.PortStringConverter"/>
        <import type="android.widget.ArrayAdapter"/>
        <variable type="MainActivityListenerViewModel" name="viewModel"/>
        <variable type="GenerateInfo" name="generateInfo"/>
        <variable type="ServerInfo" name="serverInfo"/>
        <variable type="ArrayAdapter&lt;String&gt;" name="adapter"/>
        <variable type="boolean" name="enabled"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_host_hint"
            android:text="@={serverInfo.host}" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_port_hint"
            android:text="@={PortStringConverter.INSTANCE.toStr(serverInfo.port)}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_count_hint"
            android:text="@={CountStringConverter.INSTANCE.toStr(generateInfo.count)}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_minimum_hint"
            android:text="@={MinimumStringConverter.INSTANCE.toStr(generateInfo.minimum)}"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/edittext_maximum_hint"
            android:text="@={MaximumStringConverter.INSTANCE.toStr(generateInfo.maximum)}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleGenerateButton()}"
            android:enabled="@{enabled}"
            android:text="@string/button_generate_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleConfigurationButton()}"
            android:enabled="@{enabled}"
            android:text="@string/button_configuration_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{enabled}"
            android:text="@string/button_save_text"
            android:onClick="@{() -> viewModel.handleSaveButton()}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{enabled}"
            android:text="@string/button_clear_text"
            android:onClick="@{() -> viewModel.handleClearButton()}"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adapter="@{adapter}"
            />

    </LinearLayout>
</layout>
